infrastructure/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: food-ordering
  labels:
    app: food-ordering-system
